--- a/index.html
+++ b/index.html
@@ -3,15 +3,135 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 	<title>StationSavvy Case Study</title>
   	<!-- link in Bootstrap here -->
   	<link rel="stylesheet" 
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
     	integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
 		crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Asap:400,600&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <h1>StationSavvy Case Study</h1>
+<body style="font-family: 'Asap', sans-serif;">
+	<header>
+	</header>
+
+	<main role="main">
+		<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
+			<div class="row text-align-center">
+				<div class="col-md-3 order-md-1">
+					<h2>StationSavvy</h2>
+				</div>
+				<div class="col-md-9 order-md-2">
+					<p class="lead">A platform that provides a centralized knowledge-base about metro stations through station profiles, including station operations, navigation, and facilities.</p>
+					<div class="row">
+						<div class="col-md-3">
+							<b>Timeline_</b>
+							<p>4 days</p>
+						</div>
+
+						<div class="col-md-3">
+							<b>Team_</b>
+							<ul class="list-unstyled">
+								<li>Kitty He</li>
+								<li>Rachel DeNoble</li>
+								<li>Giada Sun</li>
+							</ul>
+						</div>
+
+						<div class="col-md-6">
+							<b>Tools_</b>
+							<ul class="list-unstyled">
+								<li>Formative Research, Wireframing, Prototyping</li>
+								<li>Figma, Google Slides</li>
+							</ul>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+			
+		<div class="jumbotron jumbotron-fluid bg-primary text-white">
+			<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
+				<div class="row text-align-center">
+					<div class="col-md-3 order-md-3">
+						<h3>Design Challenge</h3>
+					</div>
+					<div class="col-md-9 order-md-4">
+						<p class="lead">How might we connect metro riders and administrators to share knowledge about metro stations and make them easier to manage?</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container text-center pt-3 pb-3 pt-md-5 pb-md-5">
+			<div class="row">
+				<div class="col-lg-4">
+					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+					<h3 class="mt-3">Flag</h3>
+					<p>Riders can flag content if they find it’s incorrect.</p>
+				</div>
+
+				<div class="col-lg-4">
+					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+					<h3 class="mt-3">Report</h3>
+					<p>Riders report issues they see in the station to help the administrators mitigate them.</p>
+				</div>
+
+				<div class="col-lg-4">
+					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+					<h3 class="mt-3">Comment</h3>
+					<p>Riders also write comments about the station, which can be marked as “useful” by other riders.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="jumbotron jumbotron-fluid">
+			<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
+				<div class="row text-align-center">
+					<div class="col-md-3 order-md-3">
+						<h3>Benefits</h3>
+					</div>
+					<div class="col-md-9 order-md-4">
+						<p class="lead">How might we connect metro riders and administrators to share knowledge about metro stations and make them easier to manage?</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
+			<div class="row text-align-center">
+				<div class="col-md-3 order-md-3">
+					<h3>Research</h3>
+				</div>
+				<div class="col-md-9 order-md-4">
+					<p class="lead">How might we connect metro riders and administrators to share knowledge about metro stations and make them easier to manage?</p>
+				</div>
+			</div>
+		</div>
+				
+		<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
+			<div class="row text-align-center">
+				<div class="col-md-3 order-md-3">
+					<h3>Concepts</h3>
+				</div>
+				<div class="col-md-9 order-md-4">
+					<p class="lead">How might we connect metro riders and administrators to share knowledge about metro stations and make them easier to manage?</p>
+				</div>
+			</div>
+		</div>			
+			
+
+		</div>
+
+		</div>
+
+
+
+	</main>
+
 </body>
 </html>
