--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     	integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
 		crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Asap:400,600&display=swap" rel="stylesheet">
+	<style>
+	</style>
 </head>
 
 <body style="font-family: 'Asap', sans-serif;">
 	<header>
+		<img src="img/cover-01.jpg" class="img-fluid mb-2 mb-md-3" alt="Responsive image">
 	</header>
 
 	<main role="main">
