--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</div>
 				<div class="col-md-9 order-md-2">
 					<p class="lead">A platform that provides a centralized knowledge-base about metro stations through station profiles, including station operations, navigation, and facilities.</p>
-					<div class="row">
+					<div class="row pt-2 pt-md-4">
 						<div class="col-md-3">
 							<b>Timeline_</b>
 							<p>4 days</p>
@@ -57,7 +57,7 @@
 			</div>
 		</div>
 			
-		<div class="jumbotron jumbotron-fluid bg-primary text-white">
+		<div class="jumbotron jumbotron-fluid text-white" style="background-color: #294E70;">
 			<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
 				<div class="row text-align-center">
 					<div class="col-md-3 order-md-3">
@@ -73,33 +73,47 @@
 		<div class="container text-center pt-3 pb-3 pt-md-5 pb-md-5">
 			<div class="row">
 				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h3 class="mt-3">Flag</h3>
+					<img class="shadow" src="img/feature-1.png" alt="Generic placeholder image" width="80%">
+					<h3 class="mt-3" style="color: #294E70;">Flag</h3>
 					<p>Riders can flag content if they find it’s incorrect.</p>
 				</div>
 
 				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h3 class="mt-3">Report</h3>
+					<img class="shadow" src="img/feature-2.png" alt="Generic placeholder image" width="80%">
+					<h3 class="mt-3" style="color: #294E70;">Report</h3>
 					<p>Riders report issues they see in the station to help the administrators mitigate them.</p>
 				</div>
 
 				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h3 class="mt-3">Comment</h3>
+					<img class="shadow" src="img/feature-3.png"" alt="Generic placeholder image" width="80%">
+					<h3 class="mt-3" style="color: #294E70;">Comment</h3>
 					<p>Riders also write comments about the station, which can be marked as “useful” by other riders.</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="jumbotron jumbotron-fluid">
+		<div class="jumbotron jumbotron-fluid text-white" style="background-color: #294E70;">
 			<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
 				<div class="row text-align-center">
 					<div class="col-md-3 order-md-3">
 						<h3>Benefits</h3>
 					</div>
 					<div class="col-md-9 order-md-4">
-						<p class="lead">How might we connect metro riders and administrators to share knowledge about metro stations and make them easier to manage?</p>
+						<img src="img/benefit.png"" alt="Generic placeholder image" width="100%">
+						<div class="container pt-2 pt-md-3 pb-3 pb-md-4 text-center">
+							<div class="row">
+								<div class="col-lg-5">
+									<h4 class="mt-3">METRO RIDERS</h3>
+									<p>Trustworthy knowledge-base<br>Easier to seek and get help</p>
+								</div>
+				
+								<div class="col-lg-5 offset-md-2">
+									<h4 class="mt-3">METRO ADMINISTRATORS</h3>
+									<p>Issue identification<br>Resource allocation</p>
+								</div>
+							</div>
+						</div>
+						<p>StationSavvy provides riders access to a trustworthy knowledge-base about the station. The goal is to have riders and administrators each make their individual contributions on the Station Savvy website to create a good experience. Riders contribute to the website, providing useful information and helping them to seek help easier and faster, we introduce metro administrators to ensure the trustworthiness of the information as well.</p>
 					</div>
 				</div>
 			</div>
@@ -111,26 +125,128 @@
 					<h3>Research</h3>
 				</div>
 				<div class="col-md-9 order-md-4">
-					<p class="lead">How might we connect metro riders and administrators to share knowledge about metro stations and make them easier to manage?</p>
+					<div class="container pt-3 pt-md-0"">
+						<div class="row">
+							<div class="col-lg-6 pb-3 pb-md-4">
+								<ul class="list-group">
+									<li class="list-group-item text-white" style="background-color: #294E70;">User interviews</li>
+									<li class="list-group-item">Three young professionals</li>
+									<li class="list-group-item">Avid travelers</li>
+									<li class="list-group-item">Regular public transit users</li>
+								</ul>
+							</div>
+							<div class="col-lg-6 pb-3 pb-md-4">
+								<ul class="list-group">
+									<li class="list-group-item text-white" style="background-color: #294E70;">Online research about travel CSCW sites</li>
+									<li class="list-group-item">Waze</li>
+									<li class="list-group-item">Google Map</li>
+									<li class="list-group-item">Yelp</li>
+									<li class="list-group-item">TripAdvisor</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<p>
+						The most significant insights we learn from the interviews is there is not a centralized source to figure out micro logistics or interactions about a station during a trip. Often, they have to reach out to people they know already live the the place for help or spend a lot of time doing research, try to find more credible and helpful information specifically about the stations they will go to.
+					</p>
+					<p>
+						For Waze, to ensure the system render the best and quickest route options for users, they have a map editor feature to encourage users to report missing/inaccurate information on the map. By giving users a stake to improve the map, users feel more control and confident with their trips.
+					</p>
 				</div>
 			</div>
 		</div>
 				
 		<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
 			<div class="row text-align-center">
-				<div class="col-md-3 order-md-3">
+				<div class="col-md-3">
 					<h3>Concepts</h3>
 				</div>
-				<div class="col-md-9 order-md-4">
-					<p class="lead">How might we connect metro riders and administrators to share knowledge about metro stations and make them easier to manage?</p>
+				<div class="col-md-4 align-self-center">
+					<p class="lead mb-1">Concept 1</p>
+					<h3 class="pb-2">Transit system Q&A forum</h3>
+					<p>
+						Tourists submit transit-related questions in a forum-type platform. Those with local expertise contribute answers to the questions. Questions and answers are tagged and organized so they can be discovered later.
+					</p>
+				</div>
+				<div class="col-md-5 pb-2 pb-md-4">
+					<img src="img/concept-1.png" alt="Generic placeholder image" width="100%">
+				</div>
+
+				<div class="col-md-4 offset-md-3 align-self-center">
+					<p class="lead mb-1">Concept 2</p>
+					<h3 class="pb-2">Local guide pairing</h3>
+					<p>
+						Tourists will be matched with a local guide when travelling to ask questions about transit. To be matched, the tourist does a short quiz about the their transit plan and special considerations during travel.
+					</p>
+				</div>
+				<div class="col-md-5 pt-2 pb-2 pt-md-4 pb-md-4">
+					<img src="img/concept-2.png"" alt="Generic placeholder image" width="100%">
+				</div>
+
+				<div class="col-md-4 offset-md-3 align-self-center">
+					<p class="lead mb-1">Concept 3</p>
+					<h3 class="pb-2">Station profile</h3>
+					<p>
+						Municipal transit stations have profiles that locals enter essential information about using the related transit system. 
+						Tourists can regularly validate the information on the profile, and add any other relevant information, tips, comments, and questions to help other tourists in the future.	
+					</p>
+				</div>
+				<div class="col-md-5 pt-2 pb-3 pt-md-4 pb-md-5">
+					<img src="img/concept-3.png"" alt="Generic placeholder image" width="100%">
 				</div>
 			</div>
 		</div>			
 			
-
+		<div class="jumbotron jumbotron-fluid">
+			<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
+				<div class="row text-align-center">
+					<div class="col-md-3 order-md-3">
+						<h3>Down Selection</h3>
+					</div>
+					<div class="col-md-9 order-md-4">
+						<div class="container pt-3 pt-md-0"">
+							<div class="row">
+								<div class="col-lg-4 pb-3 pb-md-4">
+									<ul class="list-group">
+										<li class="list-group-item text-white bg-secondary">Transit System Q&A</li>
+										<li class="list-group-item bg-light">Not timely answers</li>
+										<li class="list-group-item bg-light">Similar to Trip Advisor, 
+												but limited to transit</li>
+									</ul>
+								</div>
+								<div class="col-lg-4 pb-3 pb-md-4">
+									<ul class="list-group">
+										<li class="list-group-item text-white bg-secondary">Local Guide</li>
+										<li class="list-group-item bg-light"">Would be great for tourists 
+												in a perfect world</li>
+										<li class="list-group-item bg-light">Local people are not motivated or available to be “on call” for this kind of support to tourists</li>
+									</ul>
+								</div>
+								<div class="col-lg-4 pb-3 pb-md-4">
+									<ul class="list-group">
+										<li class="list-group-item text-white" style="background-color: #294E70;">Station Profile</li>
+										<li class="list-group-item">Provide a centralized knowledge-base about metro station operations, navigation, and facilities</li>
+										<li class="list-group-item">Help riders figure out micro-logistics and interactions of a metro station</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
+		<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
+			<div class="row text-align-center">
+				<div class="col-md-3 order-md-3">
+					<h3>Prototype</h3>
+				</div>
+				<div class="col-md-9 order-md-4">
+					<img src="img/prototype.png" alt="Generic placeholder image" width="100%">
+				</div>
+			</div>
 		</div>
+
 
 
 
