--- a/index.html
+++ b/index.html
@@ -238,17 +238,83 @@
 
 		<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
 			<div class="row text-align-center">
-				<div class="col-md-3 order-md-3">
-					<h3>Prototype</h3>
+				<div class="col-md-3">
+					<h3>First Prototype</h3>
 				</div>
-				<div class="col-md-9 order-md-4">
+				<div class="col-md-5">
 					<img src="img/prototype.png" alt="Generic placeholder image" width="100%">
+				</div>
+				<div class="col-md-4">
+					<p>We found the participants:
+						Were concerned about the quality and accuracy of user-generated content. They want the “essential” information, such as how to buy a ticket, to come from an “official” source.
+						Were generally overwhelmed. There was too much content in one place, and the different levels of hierarchy were confusing.
+						Disliked the “dislike”. If content was disliked, participants didn’t understand why it was there, or what the threshold was for content being removed.</p>
 				</div>
 			</div>
 		</div>
 
+		<img src="img/refined-prototype.jpg" class="img-fluid mb-2 mb-md-3" alt="Responsive image">
 
+		<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
+			<div class="row text-align-center">
+				<div class="col-md-3">
+					<h3>Refined Prototype</h3>
+				</div>
+				<div class="col-md-9">
+					<p>Narrowed scope to metro stations only for the purposes of the project. Some of the features we were considering weren’t suited for metro stations, so this allowed us a clear and fast way to simplify the feature set.
+						Made Station Administrators the primary maintainers of the Station Profiles. Station Admins now populate the “official” information on the profiles, including station Entrances/Exits, Ticketing, Lines Stopping Here, Nearby Transfers, Amenities and Accessibility.
+						Reorganized Station Profiles to function more like Yelp profiles. “Official” content comes from Station Admins, but Metro Riders can flag the “official” content, and contribute feedback via comments.
+						Introduced Issue Reporting. In the spirit of CSCW and collaboration, we thought it would be productive for riders have the ability to report issues they see in the station regarding cleanliness, safety, and lost items in the station.
+						Rethought the “likes”. Rather than liking or disliking, we changed it so that users could mark user-generated content as “useful”. Dislikes were removed completely.</p>
+				</div>
+			</div>
+		</div>
 
+		<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
+			<div class="row text-align-center">
+				<div class="col-md-3">
+					<h3>What’s next?</h3>
+				</div>
+				<div class="col-md-9">
+					<p class="lead">
+						Are station administrators willing to contribute to this model? What challenges do they face?
+					</p>
+					<p class="lead">
+						Are there any other effective contribution / collaboration possibilities we can consider?
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="jumbotron jumbotron-fluid text-white" style="background-color: #294E70;">
+			<div class="container pt-3 pb-3 pt-md-5 pb-md-5">
+				<div class="row text-align-center">
+					<div class="col-md-3 order-md-3">
+						<h3>Takeaways</h3>
+					</div>
+					<div class="col-md-9 order-md-4">
+						<div class="container">
+							<div class="row">
+								<div class="col-lg-6">
+									<h4 class="mt-3">Practice IA structuring</h3>
+									<p>Learning how to organize and present a lot of information is complicated and time-consuming.</p>
+								</div>
+				
+								<div class="col-lg-6">
+									<h4 class="mt-3">Improve testing & do more</h3>
+									<p>Learn to present low-fidelity prototypes, find the participants that will give you quality feedback, and budget time for several rounds of research so we can test iterations.</p>
+								</div>
+
+								<div class="col-lg-6">
+									<h4 class="mt-3">Design has to be an iterative process</h3>
+									<p>Learn to make educated guesses and apply what we heard from different scenarios to the one we moved forward with.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 	</main>
 
